fixed enlarged margin-bottom between divs/related problem with nav bar overlapping divs without margin.

--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,17 @@ div#rankContainer h2 {
 }
 
 #heading {
+	position: fixed;
+	width:100%;
 	background-color: white !important;
 	border-bottom: 5px solid #03426A;
-
+	overflow: hidden;
 }
 
 #bodyContainer{
 	text-align: center;
 	width:100%;
+	padding-bottom: 20px;
 }
 
 #rankContainer{
@@ -45,12 +48,12 @@ div#rankContainer h2 {
 	min-height: 300px;
 	background-color: #FFFFFF;
 	display: inline-block;
-	margin: 20px 10px 20px 10px;
+	margin-right: 10px;
+	margin-left:10px;
 	vertical-align: top;
 	-webkit-box-shadow: 0px 5px 5px 0px #03426A;
 	-moz-box-shadow: 0px 5px 5px 0px #03426A;
 	box-shadow: 0px 5px 5px 0px #03426A;
-
 
 }
 
@@ -109,12 +112,56 @@ h2 a:hover {
 	#footer p {
 		width: 75%;
 	}
+
 }
 
+@media (min-width:1000px){
+	div.top1{
+		margin: 125px 10px 20px 10px;
+	}
+
+	div.top2{
+		margin: 125px 10px 20px 10px;
+	}
+
+	div.top3{
+		margin: 125px 10px 20px 10px;
+	}
+}
+
+@media (max-width:1000px){
+	div.top1{
+		margin: 125px 10px 20px 10px;
+	}
+
+	div.top2{
+		margin: 125px 10px 20px 10px;
+	}
+
+	div.top3{
+		margin: 25px 10px 20px 10px;
+	}
+}
+
+@media (max-width:500px){
+	div.top1{
+		margin: 125px 10px 20px 10px;
+	}
+
+	div.top2{
+		margin: 25px 10px 20px 10px;
+	}
+
+	div.top3{
+		margin: 25px 10px 20px 10px;
+	}
+
+}
 
 @media (min-width: 1000px) {
 	#footer p {
 		width: 50%;
 		max-width:600px;
 	}
+
 }
